<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/preLevelTapToPlayButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="817dp"
        android:layout_height="1464dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="7dp"
        android:background="@mipmap/background_carbon"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/mainConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toEndOf="@+id/mainConstraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/preLevelDescriptionTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/level_one_description"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/preLevelButtonsLinearLayout"
        android:layout_width="440dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preLevelDescriptionTextView"
        android:background="@color/colorWhite"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp">


        <ImageButton
            android:id="@+id/preLevelHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/go_to_menu"
            android:visibility="visible"
            android:background="@color/colorWhite"
            app:srcCompat="@drawable/home_button"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"/>

        <ImageButton
            android:id="@+id/preLevelReplayButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/replay_level"
            android:visibility="visible"
            app:srcCompat="@drawable/replay_button"
            android:paddingRight="10dp"
            android:background="@color/colorWhite"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingLeft="15dp"/>

        <ImageButton
            android:id="@+id/preLevelNextLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/next_level"
            android:visibility="visible"
            android:background="@color/colorWhite"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="80dp"
            android:paddingRight="80dp"
            app:srcCompat="@drawable/next_level_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/preLevelTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="577dp"
        android:text="@string/level"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/preLevelTapToContinueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="602dp"
        android:layout_marginBottom="113dp"
        android:text="@string/tap_to_continue"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preLevelCurrentScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="242dp"
        android:layout_marginBottom="95dp"
        android:text="@string/level_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/preLevelDescriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

</android.support.constraint.ConstraintLayout>